--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -326,39 +326,38 @@ tr.separator {
     margin: 5px;
 }
 
-.Sorting form:not(.sorting-row) .glyphicon-option-vertical {
-    visibility: hidden;
+.Sorting .explain-sorting {
+    background-color: #fff;
+    color: #000;
 }
-.Sorting form.sorting-row {
-    background-color: #F8F8F8;
+.Sorting .explain-pattern {
+    border: none;
+    width: 100%;
 }
-.Sorting form:not(.sorting-row) {
-    background-color: #FFFFE0;
+.Sorting .pattern-table {
+    border:1px solid #ccc;
 }
-.Sorting .preview .preview_buttons {
-    border: 1px solid #ccc;
+.Sorting .sorter-switch {
+    margin-right: 0.2em;
 }
-.Sorting .preview {
-    border-top: none;
+.Sorting .sorter-switch-container {
+    margin-top: 0.2em;
 }
-.Sorting .preview-buttons {
-    border-bottom: none;
+.Sorting .sorter-placeholder {
+    position: relative;
 }
-.Sorting table {
-    margin: 0px;
-}
-.Sorting .sortTable th {
-    padding: 5px 0px 0px 0px;
-}
-.Sorting .sortTable td {
-    padding: 0px 5px 0px 5px;
-}
-.Sorting .sortTable th {
-    text-align: left;
-    padding-left: 5px;
-}
-.Sorting hr {
-    margin: 5px;
+.Sorting .sorter-placeholder:after {
+    content: "\e034";
+    font-family: "Glyphicons Halflings";
+    background: unset;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 30px;
+    border-radius: 15px;
+    border: 1px dashed #444;
 }
 
 .RSS .rss-section input[type="text"] {
@@ -455,6 +454,9 @@ tr.separator {
 }
 .align-center {
     text-align: center;
+}
+.valign-top {
+    vertical-align: top;
 }
 .nowrap {
     white-space: nowrap;
