--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -54,6 +54,19 @@
                             <label class="config" for="displayname$cur">$T('sortString')</label>
                             <input type="text" name="sort_string" id="field_sort_string" value="$slot.sort_string" required="required" />
                         </div>
+                        <!--#if $cur == 0#-->
+                        <!-- PRESETS -->
+                        <div id="presets" class="field-pair">
+                            <label class="config">$T('presetSort')</label>
+                            <div class="presets">
+                                <input type="button" class="btn btn-default" onclick="set_preset('%title (%y)/%title (%y).%ext',' CD%1');" value="$T('button-inFolders')" />
+                                <input type="button" class="btn btn-default" onclick="set_preset('%title (%y).%ext',' CD%1');" value="$T('button-noFolders')" />
+                                <input type="button" class="btn btn-default" onclick="set_preset('%sn season %s/episode %0e %r.%ext','');" value="$T('button-Series')" />
+                                <input type="button" class="btn btn-default" onclick="set_preset('%0decade/%title (%y).%ext',' CD%1');" value="$T('decade')" />
+                                <input type="button" class="btn btn-default" onclick="set_preset('%dn.%ext')" value="$T('button-FileLikeFolder')" />
+                            </div>
+                        </div>
+                        <!--#end if#-->
                         <div class="field-pair">
                             <label class="config" for="displayname$cur">$T('guessit-type')</label>
                             <select name="sort_type" multiple="multiple" class="multiple_cats" <!--#if $cur == 0#-->id="field_sort_type"<!--#end if#-->>
@@ -80,18 +93,8 @@
                             <label class="config" for="displayname$cur">$T('multiPartLabel')</label>
                             <input type="text" name="multipart_label" id="multipart_label" value="$slot.multipart_label" size="8" />
                         </div>
-                        <!-- PREVIEW -->
                         <!--#if $cur == 0#-->
-                        <div id="preview_buttons" class="field-pair">
-                            <label class="config">$T('presetSort')</label>
-                            <div class="presets">
-                                <input type="button" class="btn btn-default" onclick="set_preset('%title (%y)/%title (%y).%ext',' CD%1');" value="$T('button-inFolders')" />
-                                <input type="button" class="btn btn-default" onclick="set_preset('%title (%y).%ext',' CD%1');" value="$T('button-noFolders')" />
-                                <input type="button" class="btn btn-default" onclick="set_preset('%sn season %s/episode %0e %r.%ext','');" value="$T('button-Series')" />
-                                <input type="button" class="btn btn-default" onclick="set_preset('%0decade/%title (%y).%ext',' CD%1');" value="$T('decade')" />
-                                <input type="button" class="btn btn-default" onclick="set_preset('%dn.%ext')" value="$T('button-FileLikeFolder')" />
-                            </div>
-                        </div>
+                        <!-- PREVIEW -->
                         <div id="preview" class="field-pair">
                             <label class="config" for="preview_name">$T('sort-test-data')</label>
                             <input type="text" id="preview_name" autocomplete="off" name="preview_name" placeholder="$T('orgJobname')" /><button class="btn btn-default clearBtn" type="button"><span class="glyphicon glyphicon-remove"></span> $T('button-clear')</button>
