Replace series/date/movie sorters with a generic one + season pack handling (#2461)
* replace series/date/movie sorters with a generic sorter

* fix test_eval_sort on windoze

* unbreak and de-uglify the fix

* add special setting for season pack sorting

* remove unused import

* replace series/date/movie sorters with a generic sorter

* fix test_eval_sort on windoze

* unbreak and de-uglify the fix

* add special setting for season pack sorting

* remove unused import

* correct type for sort_type entries

* standardize ui

* add visual hints for drag-n-drop

* move presets directly below sort string field

* replace hex with ascii letters to avoid random occurences of (cd|e)[0-9]+

* Some styling things

---------

Co-authored-by: Safihre <safihre@sabnzbd.org>

--- a/interfaces/Config/templates/staticcfg/css/style.css
+++ b/interfaces/Config/templates/staticcfg/css/style.css
@@ -326,6 +326,50 @@ tr.separator {
     margin: 5px;
 }
 
+.Sorting .explain-sorting {
+    background-color: #fff;
+    color: #000;
+}
+.Sorting .explain-pattern {
+    border: none;
+    width: 100%;
+}
+.Sorting .pattern-table {
+    border:1px solid #ccc;
+}
+.Sorting .sorter-switch {
+    margin-right: 0.2em;
+}
+.Sorting .sorter-switch-container {
+    margin: 10px 0px;
+    height: 1.5em;
+    display: block;
+}
+.Sorting .sorter-placeholder {
+    position: relative;
+}
+.Sorting .sorter-placeholder:after {
+    content: "\e034";
+    font-family: "Glyphicons Halflings";
+    background: unset;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 30px;
+    border-radius: 15px;
+    border: 1px dashed #444;
+}
+.Sorting .glyphicon-option-vertical {
+    margin-top: 1.5em;
+    margin-right: 0.2em;
+    cursor: move;
+}
+.Sorting form:not(.sorting-row) .glyphicon-option-vertical {
+    visibility: hidden;
+}
+
 .RSS .rss-section input[type="text"] {
     max-width: 180px;
 }
@@ -420,6 +464,9 @@ tr.separator {
 }
 .align-center {
     text-align: center;
+}
+.valign-top {
+    vertical-align: top;
 }
 .nowrap {
     white-space: nowrap;
@@ -1247,6 +1294,12 @@ html[dir="rtl"] .Scheduling form[action="addSchedule"] input[type="checkbox"] {
     .Servers .server-amounts-text {
         padding: 0px 15px 10px;
         width: inherit;
+    }
+    .Sorting .glyphicon-option-vertical {
+        display: none;
+    }
+    .Sorting .sorter h3 {
+        cursor: move;
     }
 }
 
